<resources>
    <string name="app_name"></string>
    <string name="title_activity_second_page_login">SecondPageLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hyperlink"><a href="Already have an account?">Already have an account?</a></string>
    <string name="forgotPassword_hyperlink"><a href="Forgotten Password?">Forgotten Password?</a></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="password_hint">Password</string>
    <string name="emailid">emailId</string>
    <string name="email_hint">email</string>
    <string name="lastName_hint">LastName</string>
    <string name="firstName_hint">Name</string>
    <string name="Registration_Form">Registration Form</string>
    <string name="create_new_account">create new account</string>
    <string name="password">password</string>
    <string name="facebook">fundoo App</string>
    <string name="email_id_or_phone_number">Email id or phone number</string>
    <string name="log_in">Log In</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="textLoading">Loading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_dash_board">HomeDashBoardActivity</string>
    <string name="fundoo">Fundoo</string>
    <string name="note">description</string>
    <string name="drawer_open">DrawerOpen</string>
    <string name="drawer_close">DrawerClose</string>
    <string name="user_name">User Name:</string>
    <string name="channel_name">REMINDER</string>
    <string name="channel_description">Note Reminder</string>
    <string name="date_place_holder">%s-%s-%s</string>
    <string name="select_date">SELECT DATE</string>
    <string name="select_time">SELECT TIME</string>
    <string name="dateFormat">DD - MM - YYYY</string>
    <string name="timeFormat">H:MM</string>
    <string name="cancelReminder">Cancel</string>
    <string name="AddReminder">Add</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
</resources>